2004-01-16  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-01-14  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-01-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* COPYING: Note that TODO no longer contains anything from the
	original bsd-games 1.3.

	* phantasia/phantasia.6, wtf/acronyms, wtf/acronyms.comp: Update
	from NetBSD CVS.

2004-01-02  Joseph S. Myers  <jsm@polyomino.org.uk>

	* atc/atc.6.in, backgammon/backgammon/main.c,
	backgammon/teachgammon/data.c, caesar/caesar.c,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes2,
	fortune/fortune/fortune.c, hack/hack.options.c, phantasia/main.c,
	phantasia/misc.c, rogue/Makefile.bsd, rogue/rogue.h,
	wargames/wargames.6, worm/worm.6, wtf/acronyms: Update from NetBSD
	CVS.
	* dab: New directory from NetBSD CVS.
	* COPYING, INSTALL, README, bsd-games.lsm, Makeconfig.in,
	configure, exec.libs, exec.objs: Update.
	* dab/Makefrag: New file.

2003-12-18  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Version 2.15.

	* NEWS, bsd-games.lsm, bsd-games-non-free.lsm: Update.

	* README: Update.

2003-12-17  Joseph S. Myers  <jsm@polyomino.org.uk>

	* backgammon/backgammon/main.c (main): Only score as a Gammon or a
	Backgammon if the opponent hasn't removed any pieces, not if the
	opponent has removed pieces but has had a piece knocked back to
	the bar afterwards.  Fixes Debian bug 185101 from Konstantin
	Seiler <list@kseiler.de>.

	* fortune/fortune/fortune.c (fortlen): Return proper fortune
	length for fortune files without STR_RANDOM or STR_ORDERED rather
	than comparing it to SLEN.  Bug reported by Simon Williams
	<simon@no-dns-yet.org.uk>.

	* fortune/fortune/fortune.c (init_prob): Show residual probability
	rather than non-residual in "No place to put residual probability"
	error message.  Distribute residual probability correctly rather
	than all to one file.  Patch from Mike Castle